Thu Jun 21 13:43:20 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Sender/QCTL_Test_Sender.idl:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Sender/QCTL_Test_Sender_exec.h:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/Sender/QCTL_Test_Sender_exec.cpp:
        * connectors/dds4ccm/tests/QueryCondition/TwoListeners/descriptors/Plan.cdp:
          Added connector status listener. The test starts upon receiving a publication matched
          event from DDS.

Thu Jun 21 10:11:38 UTC 2012  Marijke Hengstmengel <mhengstmengel@remedy.nl>

        * ciao/Deployment/Handlers/Component_Handler.cpp:
        Solved msvc error.

Thu Jun 21 09:08:38 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ciao/Containers/Container_Base_T.cpp:
        * ciao/Deployment/Handlers/Component_Handler.cpp:
          More logging

Thu Jun 21 08:40:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

      commit f169a288e51231ca120d066e143742d1432a8443
      Author: Marijke Hengstmengel <MHengstmengel@remedy.nl>
      Date:   Thu Jun 21 10:31:36 2012 +0200

              * CIAO/tests/TTSCTest/TTSConnector/TTSConnector_conn.cpp:
              * CIAO/tests/TTSCTest/TTSConnector/TTSConnector_conn.h:
              * CIAO/tests/TTSConnContext/TTSCConnector/TTSCConnector_conn.cpp:
              * CIAO/tests/TTSConnContext/TTSCConnector/TTSCConnector_conn.h:
              used reference-counting policy for pulse_Generator to solve memory leaks

Wed Jun 20 08:13:50 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        Merged service_connector branch. This adds support for so called
        service components which are available through the component context
        using resolve_service_reference. Service components are deployed as
        regular components, but are installed by the installation handler (see
        the TTSCTest test) or they install themselves into the service registry